Gerado controller and Views (Orientador)

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Funcionario" asp-action="Index">Funcionário</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orientador" asp-action="Index">Professor Orientador</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
