--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Orientador" asp-action="Index">Professor Orientador</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Monografia" asp-action="Index">Monografia</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
