alterando user type

--- a/Views/Funcionario/Details.cshtml
+++ b/Views/Funcionario/Details.cshtml
@@ -1,4 +1,4 @@
-@model MonografiasIfma.Models.Funcionario
+﻿@model MonografiasIfma.Models.Funcionario
 
 @{
     ViewData["Title"] = "Details";
@@ -15,6 +15,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Codigo)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.UserType)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.UserType)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
@@ -45,12 +51,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Campus)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserType)
         </dd>
     </dl>
 </div>
