--- a/Views/Monografia/Index.cshtml
+++ b/Views/Monografia/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<MonografiasIfma.Models.Monografia>
+﻿@model IEnumerable<MonografiasIfma.Models.Monografia>
 
 @{
     ViewData["Title"] = "Index";
