--- a/Views/Aluno/Details.cshtml
+++ b/Views/Aluno/Details.cshtml
@@ -1,4 +1,4 @@
-@model MonografiasIfma.Models.Aluno
+﻿@model MonografiasIfma.Models.Aluno
 
 @{
     ViewData["Title"] = "Details";
@@ -45,12 +45,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Campus)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserType)
         </dd>
     </dl>
 </div>
