--- a/Views/Funcionario/Create.cshtml
+++ b/Views/Funcionario/Create.cshtml
@@ -1,4 +1,4 @@
-@model MonografiasIfma.Models.Funcionario
+﻿@model MonografiasIfma.Models.Funcionario
 
 @{
     ViewData["Title"] = "Create";
@@ -16,6 +16,11 @@
                 <label asp-for="Codigo" class="control-label"></label>
                 <input asp-for="Codigo" class="form-control" />
                 <span asp-validation-for="Codigo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="UserType" class="control-label"></label>
+                <input asp-for="UserType" class="form-control" />
+                <span asp-validation-for="UserType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
@@ -43,11 +48,6 @@
                 <span asp-validation-for="Campus" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserType" class="control-label"></label>
-                <input asp-for="UserType" class="form-control" />
-                <span asp-validation-for="UserType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -58,3 +58,6 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
