--- a/Views/Funcionario/Index.cshtml
+++ b/Views/Funcionario/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<MonografiasIfma.Models.Funcionario>
+﻿@model IEnumerable<MonografiasIfma.Models.Funcionario>
 
 @{
     ViewData["Title"] = "Index";
@@ -16,6 +16,9 @@
                 @Html.DisplayNameFor(model => model.Codigo)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.UserType)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Nome)
             </th>
             <th>
@@ -30,9 +33,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Campus)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserType)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -41,6 +41,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Codigo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserType)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Nome)
@@ -56,9 +59,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Campus)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserType)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
