--- a/Views/Orientador/Delete.cshtml
+++ b/Views/Orientador/Delete.cshtml
@@ -1,4 +1,4 @@
-@model MonografiasIfma.Models.Orientador
+﻿@model MonografiasIfma.Models.Orientador
 
 @{
     ViewData["Title"] = "Delete";
@@ -46,12 +46,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Campus)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserType)
         </dd>
     </dl>
     
