Revert "alterando user type"
This reverts commit 76e3575814af2f2a25154ca3b8a1f29bf623b924.

--- a/Views/Aluno/Delete.cshtml
+++ b/Views/Aluno/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MonografiasIfma.Models.Aluno
+@model MonografiasIfma.Models.Aluno
 
 @{
     ViewData["Title"] = "Delete";
@@ -46,6 +46,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Campus)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.UserType)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.UserType)
         </dd>
     </dl>
     
