--- a/Views/Monografia/Edit.cshtml
+++ b/Views/Monografia/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MonografiasIfma.Models.Monografia
+@model MonografiasIfma.Models.Monografia
 
 @{
     ViewData["Title"] = "Edit";
@@ -54,6 +54,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
