--- a/Views/Aluno/Edit.cshtml
+++ b/Views/Aluno/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MonografiasIfma.Models.Aluno
+@model MonografiasIfma.Models.Aluno
 
 @{
     ViewData["Title"] = "Edit";
@@ -44,6 +44,11 @@
                 <span asp-validation-for="Campus" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="UserType" class="control-label"></label>
+                <input asp-for="UserType" class="form-control" />
+                <span asp-validation-for="UserType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -54,6 +59,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
