--- a/Views/Aluno/Index.cshtml
+++ b/Views/Aluno/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MonografiasIfma.Models.Aluno>
+@model IEnumerable<MonografiasIfma.Models.Aluno>
 
 @{
     ViewData["Title"] = "Index";
@@ -30,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Campus)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserType)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -53,6 +56,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Campus)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserType)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
