--- a/Views/Funcionario/Edit.cshtml
+++ b/Views/Funcionario/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MonografiasIfma.Models.Funcionario
+@model MonografiasIfma.Models.Funcionario
 
 @{
     ViewData["Title"] = "Edit";
@@ -16,11 +16,6 @@
                 <label asp-for="Codigo" class="control-label"></label>
                 <input asp-for="Codigo" class="form-control" />
                 <span asp-validation-for="Codigo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserType" class="control-label"></label>
-                <input asp-for="UserType" class="form-control" />
-                <span asp-validation-for="UserType" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -49,6 +44,11 @@
                 <span asp-validation-for="Campus" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="UserType" class="control-label"></label>
+                <input asp-for="UserType" class="form-control" />
+                <span asp-validation-for="UserType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -59,6 +59,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
