--- a/Views/Funcionario/Index.cshtml
+++ b/Views/Funcionario/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MonografiasIfma.Models.Funcionario>
+@model IEnumerable<MonografiasIfma.Models.Funcionario>
 
 @{
     ViewData["Title"] = "Index";
@@ -16,9 +16,6 @@
                 @Html.DisplayNameFor(model => model.Codigo)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UserType)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Nome)
             </th>
             <th>
@@ -33,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Campus)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserType)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -41,9 +41,6 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Codigo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserType)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Nome)
@@ -59,6 +56,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Campus)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserType)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
