--- a/Views/Orientador/Create.cshtml
+++ b/Views/Orientador/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MonografiasIfma.Models.Orientador
+@model MonografiasIfma.Models.Orientador
 
 @{
     ViewData["Title"] = "Create";
@@ -43,6 +43,11 @@
                 <span asp-validation-for="Campus" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="UserType" class="control-label"></label>
+                <input asp-for="UserType" class="form-control" />
+                <span asp-validation-for="UserType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -53,6 +58,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
