--- a/Views/Monografia/Details.cshtml
+++ b/Views/Monografia/Details.cshtml
@@ -32,19 +32,21 @@
             @Html.DisplayNameFor(model => model.Pdf_ArquivoBinario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Pdf_ArquivoBinario)
+            <embed src="data:application/pdf;base64,@Convert.ToBase64String(Model.Pdf_ArquivoBinario)" width="100%" height="600" type="application/pdf">
+            <a href="data:application/pdf;base64,@Convert.ToBase64String(Model.Pdf_ArquivoBinario)" download="@($"{Model.Titulo}.pdf")">Baixar PDF</a>
+
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Aluno)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Aluno.Campus)
+            @Html.DisplayFor(model => model.Aluno.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Orientador)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Orientador.Campus)
+            @Html.DisplayFor(model => model.Orientador.Nome)
         </dd>
     </dl>
 </div>
