--- a/Views/Monografia/Index.cshtml
+++ b/Views/Monografia/Index.cshtml
@@ -21,9 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.QtPaginas)
             </th>
-            <th>
+            @* <th>
                 @Html.DisplayNameFor(model => model.Pdf_ArquivoBinario)
-            </th>
+            </th> *@
             <th>
                 @Html.DisplayNameFor(model => model.Aluno)
             </th>
@@ -45,14 +45,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.QtPaginas)
             </td>
-            <td>
+           @*  <td>
                 @Html.DisplayFor(modelItem => item.Pdf_ArquivoBinario)
+            </td> *@
+            <td>
+                @Html.DisplayFor(modelItem => item.Aluno.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Aluno.Campus)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Orientador.Campus)
+                @Html.DisplayFor(modelItem => item.Orientador.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
