--- a/Views/Monografia/Create.cshtml
+++ b/Views/Monografia/Create.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Pdf_ArquivoBinario" class="control-label"></label>
-                <input type="file" name="MonografiaPDF" class="form-control" />
+                <input type="file" accept="application/pdf" required name="MonografiaPDF" class="form-control"/>
             </div>
             <div class="form-group">
                 <label asp-for="AlunoId" class="control-label"></label>
