--- a/Views/Monografia/Create.cshtml
+++ b/Views/Monografia/Create.cshtml
@@ -29,8 +29,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Pdf_ArquivoBinario" class="control-label"></label>
-                <input type="file" accept="application/pdf" required name="MonografiaPDF" class="form-control"/>
+                <input type="file" accept="application/pdf" required name="MonografiaPDF" class="form-control" />
+                <span asp-validation-for="Pdf_ArquivoBinario" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="AlunoId" class="control-label"></label>
                 <select asp-for="AlunoId" class ="form-control" asp-items="ViewBag.AlunoId"></select>
