--- a/Views/Monografia/Details.cshtml
+++ b/Views/Monografia/Details.cshtml
@@ -10,6 +10,7 @@
     <h4>Monografia</h4>
     <hr />
     <dl class="row">
+        
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Titulo)
         </dt>
@@ -27,6 +28,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.QtPaginas)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.checksum)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.checksum)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Pdf_ArquivoBinario)
