--- a/Views/Monografia/Details.cshtml
+++ b/Views/Monografia/Details.cshtml
@@ -35,10 +35,10 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.checksum)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Pdf_ArquivoBinario)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             <embed src="data:application/pdf;base64,@Convert.ToBase64String(Model.Pdf_ArquivoBinario)" width="100%" height="600" type="application/pdf">
             <a href="data:application/pdf;base64,@Convert.ToBase64String(Model.Pdf_ArquivoBinario)" download="@($"{Model.Titulo}.pdf")">Baixar PDF</a>
 
@@ -49,12 +49,14 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Aluno.Nome)
         </dd>
+        <br></br>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Orientador)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Orientador.Nome)
         </dd>
+        <button type="button" class="btn btn-success">Success</button>
     </dl>
 </div>
 <div>
