--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,49 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<Funcionario> SignInManager
+@inject UserManager<Funcionario> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
+    @* <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
-    </li>
+    </li> *@
+
+    <ul class="nav-item">
+        <form method="post" asp-controller="Login" asp-action="Logout">
+            <button type="submit" style="width:auto" class="nav-link btn btn-link py-0">
+                Logout @User.Identity.Name
+            </button>
+        </form>
+    </ul>
+
 }
 else
 {
-    <li class="nav-item">
+   @*  <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    </li> *@
+
+    <ul class="nav-item">
+        <a class="nav-link" asp-controller="Login" asp-action="Registrar">
+            Registrar
+        </a>
+    </ul>
+
+        <ul class="nav-item">
+            <a class="nav-link" asp-controller="Login" asp-action="Login">
+                Login
+            </a>
+        </ul>
+
+
 }
 </ul>
