--- a/Views/Monografia/Index.cshtml
+++ b/Views/Monografia/Index.cshtml
@@ -4,11 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
+
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-secondary menuLi"  asp-action="Create">Create New</a>
 </p>
+
 <table class="table" id="index-tables">
     <thead>
         <tr>
