--- a/Views/Shared/_MainMenu.cshtml
+++ b/Views/Shared/_MainMenu.cshtml
@@ -1,42 +1,50 @@
 ﻿
+<link rel="stylesheet" href="~/css/site.css">
+
 <ul class="sidebar-menu" data-widget="tree">
 
-    <li class="header">Menu</li>
-    <!-- Optionally, you can add icons to the links -->
-
-    <li class="active">
-            <i class="fa fa-link"></i>
-        <partial name="_LoginPartial" />
-    </li>
-    <br />
-    <br />
-    <br />
-
-    <li>
-        <a asp-controller="Monografia" asp-action="Index">
-            <i class="fa fa-link"></i>
-            <span>Monografia</span>
+    <br/>
+    <li class="menuLi">
+        <a class="btn menuLi" style="display: flex; align-items: center;" asp-controller="Home" asp-action="Index">
+            <img src="~/imgs/home.png"/>
+            <span style="margin:5px; border-radius: 10px; font-size: 16px">Home</span>
         </a>
     </li>
 
-    <li>
-        <a asp-controller="Funcionario" asp-action="Index">
-            <i class="fa fa-link"></i> 
-            <span>Funcionário</span>
+    <li class="menuLi">
+        <a class="btn menuLi" style="display: flex; align-items: center;" asp-controller="Monografia" asp-action="Index">
+            <img src="~/imgs/imgMonografia.png" />
+            <span style="margin:5px;border-radius: 10px; font-size: 16px">Monografia</span>
         </a>
     </li>
 
-    <li class="treeview">
-        <a href="#">
-            <i class="fa fa-link"></i> <span>Docentes e dicentes</span>
+
+    <li class="treeview" style="border-radius: 10px;background-color: #E0D7D7;color: #36BA2B;margin-top: 5px;">
+        <a href="#" style="display: flex; align-items: center;">
+            <img src="~/imgs/alunoIcon.png" style="width height:40"  />
+            <span style="background-color: #E0D7D7;color: #36BA2B; font-size: 16px;border-radius: 10px">Docentes e dicentes</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
             </span>
         </a>
         <ul class="treeview-menu">
-            <li><a asp-controller="Aluno" asp-action="Index">Alunos</a></li>
-            <li><a asp-controller="Orientador" asp-action="Index">Professores Orientadores</a></li>
+            <li class="menuLi" style="display: flex; align-items: center; border-radius: 10px">
+                <img src="~/imgs/alunoIcon.png" style="margin-left: 20px"/>
+                <a style="color: #36BA2B; font-size: 16px" asp-controller="Aluno" asp-action="Index">Alunos</a>
+            </li>
+
+            <li class="menuLi" style="display: flex; align-items: center;">
+                <img src="~/imgs/professorIcon.png" style="margin-left: 20px" />
+                <a style="color: #36BA2B; font-size: 16px" asp-controller="Orientador" asp-action="Index">Orientadores</a>
+            </li>
         </ul>
+    </li>
+
+    <li style="background-color: #E0D7D7; margin-top: 5px; height:100; border-radius:10px">
+        <a class="btn menuLi" style="display: flex; align-items: center;" asp-controller="Home" asp-action="Index">
+            <img src="~/imgs/usuario.png" />
+            <span style="margin:5px; border-radius: 10px;font-size: 16px">Usuarios</span>
+        </a>
     </li>
 
 </ul>
